GitVersion1/objects/Account_Rebate__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rebate Requests (Ship-To)</relationshipLabel>
        <relationshipName>Account_Rebates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ERP_ID__c</fullName>
        <formula>Account__r.ERP_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ERP_ID__c</fullName>
        <formula>NULLVALUE(Account__r.Parent.ERP_Payer_Id__c ,  Account__r.Parent.ERP_Id__c )</formula>
        <label>Parent ERP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Request__c</fullName>
        <label>Rebate Request</label>
        <referenceTo>CAR_RebateReqs__c</referenceTo>
        <relationshipName>Account_Rebates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-To Account Name</label>
        <type>Text</type>
    </fields>
    <label>Rebate Ship-To</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Rebate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Ship-Tos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>